# tagforge

./: .gitignore  .gitmessage  CMakeLists.txt  LICENSE  README.md
examples/: motor.yaml
src/: CMakeLists.txt
src/cli/: CMakeLists.txt  main.cpp
src/config/: CMakeLists.txt  config.hpp  config_loader.cpp  config_loader.hpp
src/generator/: CMakeLists.txt  generator.cpp  generator.hpp
tests/: CMakeLists.txt  test_generator.cpp
